--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_xxlarge"
-        android:text="Forgot Password"
+        android:text="@string/forgot_password_title_text"
         android:textColor="@color/brand_red"
         android:textSize="@dimen/text_size_headline"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_large"
-        android:text="Enter your email address and we'll send you instructions to reset your password."
+        android:text="@string/forgot_password_instruction_text"
         android:textAlignment="center"
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/text_size_body_1"
@@ -63,7 +63,7 @@
         android:layout_height="@dimen/button_height_regular"
         android:layout_marginTop="@dimen/spacing_xxlarge"
         android:backgroundTint="@color/brand_red"
-        android:text="Reset Password"
+        android:text="@string/reset_password_button_text"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_medium"
-        android:text="Back to Login"
+        android:text="@string/back_to_login_button_text"
         android:textColor="@color/medium_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
