--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -22,7 +22,7 @@
         android:id="@+id/login"
         android:layout_width="@dimen/button_width_regular"
         android:layout_height="@dimen/button_height_regular"
-        android:layout_gravity="start"
+        android:layout_marginTop="@dimen/spacing_large"
         android:backgroundTint="@color/brand_red"
         android:enabled="false"
         android:text="@string/sign_up"
@@ -30,7 +30,7 @@
         android:textSize="@dimen/text_size_subhead"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="566dp" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
         android:id="@+id/email"
